[package]
name = "xdsign_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxsign_types = { git = "https://github.com/worksoup/newsign.git", branch = "dev-v0.2" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["default"] }
serde_json = "1.0"
