[package]
name = "xdsign_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_read_only_table = { git = "https://github.com/worksoup/static_read_only_table.git" }
cxlib_types = { git = "https://github.com/worksoup/cxlib.git", branch = "explict-global-var" }
